--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ const sentences = [
         "start": 45.213667,
         "end": 46.893667,
         "correctAnswer": "Nó tự quyết định tương lai của mình.",
-        "translation": "它自己决定自己的未来。",
+        "translation": "他自己决定自己的未来。",
         "options": [
             "Nó tự quyết định tương lai của mih.",
             "Nó tư quyết định tương lai của mình.",
