--- a/index.html
+++ b/index.html
@@ -405,10 +405,10 @@ const sentences = [
         "correctAnswer": "Tôi phải ngủ sớm để mai đi thi.",
         "translation": "我必须早点睡好去考试。",
         "options": [
-            "Tôi phải ngủ sớm để mai đi thy.",
+            "Tôi phải ngủ sớm để mai đi thi.",
             "Tôi phải ngũ sớm để mai đi thi.",
             "Tôi phai ngủ sớm để mai đi thi.",
-            "Tôi phải ngủ sớm để mai đi thi."
+            "Tôi phải ngủ sấm để mai đi thi."
         ]
     },
     {
